monticore-generator/src/test/resources/cocos/invalid/A4021/A4021.mc4
package cocos.invalid.A4021;

grammar A4021 {


 ast A;


}
